--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S320.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S320.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.320" mc:Ignorable="d"
+             x:Class="Prevu.Synoptics.S320" mc:Ignorable="d"
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid RenderTransformOrigin="0.5,0.5">
         <Grid.RenderTransform>
@@ -69,7 +69,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="576,507,0,0" VerticalAlignment="Top" Width="40" StatusComponent="273-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="568,507,0,0" VerticalAlignment="Top" Width="40" StatusComponent="273-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -79,7 +79,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="563,413,0,0" VerticalAlignment="Top" Width="67" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="555,413,0,0" VerticalAlignment="Top" Width="67" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -167,10 +167,10 @@
         </Machines:CV_Valve_001>
         <Rectangle HorizontalAlignment="Left" Height="269" Margin="247,345,0,0" VerticalAlignment="Top" Width="95" Fill="Gray" RadiusX="15" RadiusY="15"/>
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="258,635,0,0" VerticalAlignment="Top" Height="72" Width="75"/>
-        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="568,437,0,0" VerticalAlignment="Top" Height="59" Width="58"/>
-        <Machines:Waste HorizontalAlignment="Left" Margin="574,507,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
-        <Machines:VT_BlowerCentrifuge_up HorizontalAlignment="Left" Margin="564,328,0,0" VerticalAlignment="Top" Height="77" Width="74"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="262,711,0,0" VerticalAlignment="Top" Height="77" Width="74"/>
+        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="560,437,0,0" VerticalAlignment="Top" Height="59" Width="58"/>
+        <Machines:Waste HorizontalAlignment="Left" Margin="566,507,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
+        <Machines:VT_BlowerCentrifuge_up HorizontalAlignment="Left" Margin="563,331,0,0" VerticalAlignment="Top" Height="71" Width="65"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="264,713,0,0" VerticalAlignment="Top" Height="69" Width="69"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="202,754,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -216,11 +216,11 @@
             VerticalAlignment="Top" 
             ComponentName="269-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="466,435,0,0" 
+            Margin="458,435,0,0" 
             VerticalAlignment="Top" 
             ComponentName="273-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="466,502,0,0" 
+            Margin="458,502,0,0" 
             VerticalAlignment="Top" 
             ComponentName="273-01-LP1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
