--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S530.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S530.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.530" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.S530" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
         <Labels:Pipe HorizontalAlignment="Left" Margin="184,239,0,0" VerticalAlignment="Top" Width="47" Color="Water" StatusComponent="470-01-MA1"/>
@@ -242,7 +242,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="260,640,0,0" VerticalAlignment="Top" Height="213" Width="415"/>
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="351,697,0,0" VerticalAlignment="Top" Height="93" Width="237"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="232,446,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
@@ -288,7 +288,7 @@
                 </TransformGroup>
             </Machines:SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:SCW_ScrewConveyor_straight>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="815,235,0,0" VerticalAlignment="Top" Height="180" Width="145" RenderTransformOrigin="0.5,0.5">
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="851,255,0,0" VerticalAlignment="Top" Height="139" Width="102" RenderTransformOrigin="0.5,0.5">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -298,7 +298,7 @@
                 </TransformGroup>
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="804,210,0,0" VerticalAlignment="Top" Height="49" Width="49"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="807,210,0,0" VerticalAlignment="Top" Height="45" Width="46"/>
         <Rectangle HorizontalAlignment="Left" Height="84" Margin="992,476,0,0" VerticalAlignment="Top" Width="192" Fill="Gray" RadiusX="15" RadiusY="15"/>
         <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="646,495,0,0" VerticalAlignment="Top" Width="60" Height="60"/>
         <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="742,495,0,0" VerticalAlignment="Top" Width="60" Height="60"/>
@@ -314,8 +314,8 @@
             </d:Rectangle.RenderTransform>
         </Rectangle>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="939,518,0,0" VerticalAlignment="Top" Width="16" Fill="#FFD1D1D1"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="537,468,0,0" VerticalAlignment="Top" Height="79" Width="83"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1199,292,0,0" VerticalAlignment="Top" Height="70" Width="68"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="545,471,0,0" VerticalAlignment="Top" Height="71" Width="69"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1204,301,0,0" VerticalAlignment="Top" Height="48" Width="63"/>
         <Rectangle HorizontalAlignment="Left" Height="36" Margin="1336,326,0,0" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Fill="Black">
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
@@ -327,7 +327,7 @@
             </d:Rectangle.RenderTransform>
         </Rectangle>
         <Machines:Waste HorizontalAlignment="Left" Margin="1209,371,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1192,710,0,0" VerticalAlignment="Top" Height="79" Width="84"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1204,718,0,0" VerticalAlignment="Top" Height="58" Width="70"/>
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="1200,608,0,0" VerticalAlignment="Top" Height="64" Width="62"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="1133,753,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
             <d:Rectangle.RenderTransform>
