--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S880.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.880" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.S880" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
         <Labels:Pipe HorizontalAlignment="Left" Margin="131,70,0,0" VerticalAlignment="Top" Width="179" StatusComponent="872-01-MA1" PipeHeight="Medium"/>
@@ -274,7 +274,7 @@
             </Machines:SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:SCW_ScrewConveyor_straight>
         <Rectangle HorizontalAlignment="Left" Height="84" Margin="278,187,0,0" VerticalAlignment="Top" Width="76" Fill="Gray" RadiusX="15" RadiusY="15"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="282,702,0,0" VerticalAlignment="Top" Height="79" Width="84"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="292,705,0,0" VerticalAlignment="Top" Height="70" Width="66"/>
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="290,600,0,0" VerticalAlignment="Top" Height="64" Width="62"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="222,745,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
             <d:Rectangle.RenderTransform>
