--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S140.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S140.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.140" mc:Ignorable="d"
+             x:Class="Prevu.Synoptics.S140" mc:Ignorable="d"
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid RenderTransformOrigin="0.5,0.5" Margin="-3,-1,3,1">
         <Grid.RenderTransform>
