--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S810.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S810.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.810" mc:Ignorable="d"
+             x:Class="Prevu.Synoptics.S810" mc:Ignorable="d"
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid RenderTransformOrigin="0.5,0.5">
         <Grid.RenderTransform>
@@ -229,7 +229,7 @@
             </Machines:DV_Diverter_Y.RenderTransform>
         </Machines:DV_Diverter_Y>
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="387,618,0,0" VerticalAlignment="Top" Height="70" Width="71"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="389,727,0,0" VerticalAlignment="Top" Height="77" Width="74"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="396,729,0,0" VerticalAlignment="Top" Height="67" Width="67"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="329,770,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
@@ -253,7 +253,7 @@
         <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="1193,337,0,0" VerticalAlignment="Top"/>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="878,483,0,0" VerticalAlignment="Top" Height="150" Width="158"/>
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="1127,574,0,0" VerticalAlignment="Top" Height="70" Width="71"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1129,683,0,0" VerticalAlignment="Top" Height="77" Width="74"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1137,685,0,0" VerticalAlignment="Top" Height="67" Width="67"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="1069,726,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
