--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S371.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S371.xaml
@@ -94,7 +94,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Labels:JumpLabel HorizontalAlignment="Left" Margin="475,578,0,0" VerticalAlignment="Top" JumpFromLabel="371-21-CV1" JumpToLabel="370-41-LT1"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" Margin="475,578,0,0" VerticalAlignment="Top" JumpFromLabel="371-ACS" JumpToLabel="370-41-LT1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 				Margin="211,265,0,0" 
 				VerticalAlignment="Top" 
