--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -10,7 +10,8 @@
   
     <ScrollViewer>
         <StackPanel>
-            <Synoptics:GR1/>          
+            <Synoptics:PlantView/>          
+            <Synoptics:S230/>          
         </StackPanel>
     </ScrollViewer>
 
