--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S050.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S050.xaml
@@ -453,7 +453,7 @@
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="984,699,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="060-71-PC1"/>
+            ComponentName="060-71-EC1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="385,94,0,0" 
             VerticalAlignment="Top" 
@@ -499,5 +499,13 @@
             Margin="385,148,0,0" 
             VerticalAlignment="Top" 
             ComponentName="050-01-YA1"/>
-	</Grid>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="381,628,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="020-03-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="480,148,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="050-02-MA1"/>
+    </Grid>
 </UserControl>
