--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S018.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S018.xaml
@@ -408,5 +408,9 @@
 				</TransformGroup>
 			</Machines:NT_ConveyorBelt.RenderTransform>
 		</Machines:NT_ConveyorBelt>
-	</Grid>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="32,541,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="020-04-MA1"/>
+    </Grid>
 </UserControl>
